[gd_scene load_steps=29 format=2]

[ext_resource path="res://GPT_mobile.gd" type="Script" id=1]
[ext_resource path="res://keyboard.gd" type="Script" id=2]
[ext_resource path="res://TerminatorGenisys-Vodx.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://Q.gd" type="Script" id=4]
[ext_resource path="res://TerminatorRealNfi-4WeB.otf" type="DynamicFontData" id=5]
[ext_resource path="res://Peter_animated-Sheet-Sheet.png" type="Texture" id=6]
[ext_resource path="res://OpenSans-Semibold.ttf" type="DynamicFontData" id=7]
[ext_resource path="res://peter-corrected_colors-Sheet.png" type="Texture" id=8]
[ext_resource path="res://Reply.gd" type="Script" id=9]

[sub_resource type="DynamicFont" id=3]
size = 45
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=17]
size = 20
font_data = ExtResource( 7 )

[sub_resource type="DynamicFont" id=18]
size = 20
font_data = ExtResource( 7 )

[sub_resource type="DynamicFont" id=19]
size = 20
font_data = ExtResource( 7 )

[sub_resource type="DynamicFont" id=20]
size = 20
font_data = ExtResource( 7 )

[sub_resource type="DynamicFont" id=21]
size = 20
font_data = ExtResource( 7 )

[sub_resource type="DynamicFont" id=22]
size = 20
font_data = ExtResource( 7 )

[sub_resource type="AtlasTexture" id=4]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 0, 0, 1024, 1200 )

[sub_resource type="AtlasTexture" id=10]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 0, 0, 1024, 1200 )

[sub_resource type="AtlasTexture" id=9]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 1024, 0, 1024, 1200 )

[sub_resource type="AtlasTexture" id=11]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 2048, 0, 1024, 1200 )

[sub_resource type="AtlasTexture" id=12]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 3072, 0, 1024, 1200 )

[sub_resource type="AtlasTexture" id=13]
flags = 4
atlas = ExtResource( 8 )
region = Rect2( 0, 0, 1200, 1200 )

[sub_resource type="AtlasTexture" id=14]
flags = 4
atlas = ExtResource( 8 )
region = Rect2( 1200, 0, 1200, 1200 )

[sub_resource type="AtlasTexture" id=15]
flags = 4
atlas = ExtResource( 8 )
region = Rect2( 2400, 0, 1200, 1200 )

[sub_resource type="AtlasTexture" id=16]
flags = 4
atlas = ExtResource( 8 )
region = Rect2( 3600, 0, 1200, 1200 )

[sub_resource type="SpriteFrames" id=8]
animations = [ {
"frames": [ SubResource( 4 ) ],
"loop": true,
"name": "default",
"speed": 5.0
}, {
"frames": [ SubResource( 10 ), SubResource( 9 ), SubResource( 11 ), SubResource( 12 ) ],
"loop": true,
"name": "talking",
"speed": 25.0
}, {
"frames": [ SubResource( 13 ), SubResource( 14 ), SubResource( 15 ), SubResource( 16 ) ],
"loop": true,
"name": "thinking",
"speed": 5.0
} ]

[sub_resource type="DynamicFont" id=2]
font_data = ExtResource( 5 )

[sub_resource type="StyleBoxFlat" id=23]
bg_color = Color( 0.0313726, 0.027451, 0.0705882, 1 )
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4
border_color = Color( 0.968627, 0.964706, 0.964706, 1 )
corner_radius_top_left = 12
corner_radius_top_right = 12
corner_radius_bottom_right = 12
corner_radius_bottom_left = 12

[node name="GPT_Mobile" type="Node"]
script = ExtResource( 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_bottom = 1.0
margin_right = 359.0
margin_bottom = -354.0

[node name="Client" type="Label" parent="VBoxContainer"]
margin_right = 359.0
margin_bottom = 45.0
size_flags_vertical = 5
custom_colors/font_color = Color( 0.858824, 0, 0, 1 )
custom_constants/line_spacing = 0
custom_fonts/font = SubResource( 3 )
text = "Client"
autowrap = true

[node name="ClientEnter" type="LineEdit" parent="VBoxContainer"]
margin_top = 49.0
margin_right = 359.0
margin_bottom = 73.0
caret_blink = true

[node name="Product" type="Label" parent="VBoxContainer"]
margin_top = 77.0
margin_right = 359.0
margin_bottom = 122.0
size_flags_vertical = 5
custom_colors/font_color = Color( 0.858824, 0, 0, 1 )
custom_constants/line_spacing = 0
custom_fonts/font = SubResource( 3 )
text = "Product:"
autowrap = true

[node name="ProductEnter" type="LineEdit" parent="VBoxContainer"]
margin_top = 126.0
margin_right = 359.0
margin_bottom = 150.0
caret_blink = true

[node name="Label" type="Label" parent="."]
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -448.0
margin_top = 100.0
margin_right = -149.0
margin_bottom = -291.0
autowrap = true

[node name="Keyboard" type="Panel" parent="."]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -170.0
margin_bottom = -1.0
script = ExtResource( 2 )

[node name="Row1" type="HBoxContainer" parent="Keyboard"]
anchor_right = 1.0
margin_top = 8.0
margin_bottom = 40.0

[node name="Q" type="Button" parent="Keyboard/Row1" groups=["keyboard_buttons"]]
margin_right = 92.0
margin_bottom = 34.0
focus_mode = 0
size_flags_horizontal = 3
custom_fonts/font = SubResource( 17 )
text = "Q"
script = ExtResource( 4 )

[node name="W" type="Button" parent="Keyboard/Row1" groups=["keyboard_buttons"]]
margin_left = 96.0
margin_right = 188.0
margin_bottom = 34.0
focus_mode = 0
size_flags_horizontal = 3
custom_fonts/font = SubResource( 18 )
enabled_focus_mode = 0
text = "W"

[node name="E" type="Button" parent="Keyboard/Row1" groups=["keyboard_buttons"]]
margin_left = 192.0
margin_right = 285.0
margin_bottom = 34.0
focus_mode = 0
size_flags_horizontal = 3
custom_fonts/font = SubResource( 19 )
enabled_focus_mode = 0
text = "E"

[node name="R" type="Button" parent="Keyboard/Row1" groups=["keyboard_buttons"]]
margin_left = 289.0
margin_right = 381.0
margin_bottom = 34.0
focus_mode = 0
size_flags_horizontal = 3
custom_fonts/font = SubResource( 19 )
enabled_focus_mode = 0
text = "R"

[node name="T" type="Button" parent="Keyboard/Row1" groups=["keyboard_buttons"]]
margin_left = 385.0
margin_right = 478.0
margin_bottom = 34.0
focus_mode = 0
size_flags_horizontal = 3
custom_fonts/font = SubResource( 19 )
enabled_focus_mode = 0
text = "T"

[node name="Y" type="Button" parent="Keyboard/Row1" groups=["keyboard_buttons"]]
margin_left = 482.0
margin_right = 574.0
margin_bottom = 34.0
focus_mode = 0
size_flags_horizontal = 3
custom_fonts/font = SubResource( 19 )
enabled_focus_mode = 0
text = "Y"

[node name="U" type="Button" parent="Keyboard/Row1" groups=["keyboard_buttons"]]
margin_left = 578.0
margin_right = 670.0
margin_bottom = 34.0
focus_mode = 0
size_flags_horizontal = 3
custom_fonts/font = SubResource( 19 )
enabled_focus_mode = 0
text = "U"

[node name="I" type="Button" parent="Keyboard/Row1" groups=["keyboard_buttons"]]
margin_left = 674.0
margin_right = 767.0
margin_bottom = 34.0
focus_mode = 0
size_flags_horizontal = 3
custom_fonts/font = SubResource( 19 )
enabled_focus_mode = 0
text = "I"

[node name="O" type="Button" parent="Keyboard/Row1" groups=["keyboard_buttons"]]
margin_left = 771.0
margin_right = 863.0
margin_bottom = 34.0
focus_mode = 0
size_flags_horizontal = 3
custom_fonts/font = SubResource( 19 )
enabled_focus_mode = 0
text = "O"

[node name="P" type="Button" parent="Keyboard/Row1" groups=["keyboard_buttons"]]
margin_left = 867.0
margin_right = 960.0
margin_bottom = 34.0
focus_mode = 0
size_flags_horizontal = 3
custom_fonts/font = SubResource( 19 )
enabled_focus_mode = 0
text = "P"

[node name="Row2" type="HBoxContainer" parent="Keyboard"]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_top = -36.5
margin_bottom = -4.5

[node name="A" type="Button" parent="Keyboard/Row2" groups=["keyboard_buttons"]]
margin_right = 103.0
margin_bottom = 34.0
focus_mode = 0
size_flags_horizontal = 3
custom_fonts/font = SubResource( 20 )
enabled_focus_mode = 0
text = "A"

[node name="S" type="Button" parent="Keyboard/Row2" groups=["keyboard_buttons"]]
margin_left = 107.0
margin_right = 210.0
margin_bottom = 34.0
focus_mode = 0
size_flags_horizontal = 3
custom_fonts/font = SubResource( 20 )
enabled_focus_mode = 0
text = "S"

[node name="D" type="Button" parent="Keyboard/Row2" groups=["keyboard_buttons"]]
margin_left = 214.0
margin_right = 317.0
margin_bottom = 34.0
focus_mode = 0
size_flags_horizontal = 3
custom_fonts/font = SubResource( 20 )
enabled_focus_mode = 0
text = "D"

[node name="F" type="Button" parent="Keyboard/Row2" groups=["keyboard_buttons"]]
margin_left = 321.0
margin_right = 424.0
margin_bottom = 34.0
focus_mode = 0
size_flags_horizontal = 3
custom_fonts/font = SubResource( 20 )
enabled_focus_mode = 0
text = "F"

[node name="G" type="Button" parent="Keyboard/Row2" groups=["keyboard_buttons"]]
margin_left = 428.0
margin_right = 531.0
margin_bottom = 34.0
focus_mode = 0
size_flags_horizontal = 3
custom_fonts/font = SubResource( 20 )
enabled_focus_mode = 0
text = "G"

[node name="H" type="Button" parent="Keyboard/Row2" groups=["keyboard_buttons"]]
margin_left = 535.0
margin_right = 638.0
margin_bottom = 34.0
focus_mode = 0
size_flags_horizontal = 3
custom_fonts/font = SubResource( 20 )
enabled_focus_mode = 0
text = "H"

[node name="J" type="Button" parent="Keyboard/Row2" groups=["keyboard_buttons"]]
margin_left = 642.0
margin_right = 745.0
margin_bottom = 34.0
focus_mode = 0
size_flags_horizontal = 3
custom_fonts/font = SubResource( 20 )
enabled_focus_mode = 0
text = "J"

[node name="K" type="Button" parent="Keyboard/Row2" groups=["keyboard_buttons"]]
margin_left = 749.0
margin_right = 852.0
margin_bottom = 34.0
focus_mode = 0
size_flags_horizontal = 3
custom_fonts/font = SubResource( 20 )
enabled_focus_mode = 0
text = "K"

[node name="L" type="Button" parent="Keyboard/Row2" groups=["keyboard_buttons"]]
margin_left = 856.0
margin_right = 960.0
margin_bottom = 34.0
focus_mode = 0
size_flags_horizontal = 3
custom_fonts/font = SubResource( 20 )
enabled_focus_mode = 0
text = "L"

[node name="Row3" type="HBoxContainer" parent="Keyboard"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -81.0
margin_bottom = -49.0

[node name="Z" type="Button" parent="Keyboard/Row3" groups=["keyboard_buttons"]]
margin_right = 116.0
margin_bottom = 34.0
focus_mode = 0
size_flags_horizontal = 3
custom_fonts/font = SubResource( 21 )
enabled_focus_mode = 0
text = "Z"

[node name="X" type="Button" parent="Keyboard/Row3" groups=["keyboard_buttons"]]
margin_left = 120.0
margin_right = 237.0
margin_bottom = 34.0
focus_mode = 0
size_flags_horizontal = 3
custom_fonts/font = SubResource( 21 )
enabled_focus_mode = 0
text = "X"

[node name="C" type="Button" parent="Keyboard/Row3" groups=["keyboard_buttons"]]
margin_left = 241.0
margin_right = 357.0
margin_bottom = 34.0
focus_mode = 0
size_flags_horizontal = 3
custom_fonts/font = SubResource( 21 )
enabled_focus_mode = 0
text = "C"

[node name="V" type="Button" parent="Keyboard/Row3" groups=["keyboard_buttons"]]
margin_left = 361.0
margin_right = 478.0
margin_bottom = 34.0
focus_mode = 0
size_flags_horizontal = 3
custom_fonts/font = SubResource( 21 )
enabled_focus_mode = 0
text = "V"

[node name="B" type="Button" parent="Keyboard/Row3" groups=["keyboard_buttons"]]
margin_left = 482.0
margin_right = 598.0
margin_bottom = 34.0
focus_mode = 0
size_flags_horizontal = 3
custom_fonts/font = SubResource( 21 )
enabled_focus_mode = 0
text = "B"

[node name="N" type="Button" parent="Keyboard/Row3" groups=["keyboard_buttons"]]
margin_left = 602.0
margin_right = 719.0
margin_bottom = 34.0
focus_mode = 0
size_flags_horizontal = 3
custom_fonts/font = SubResource( 21 )
enabled_focus_mode = 0
text = "N"

[node name="M" type="Button" parent="Keyboard/Row3" groups=["keyboard_buttons"]]
margin_left = 723.0
margin_right = 839.0
margin_bottom = 34.0
focus_mode = 0
size_flags_horizontal = 3
custom_fonts/font = SubResource( 21 )
enabled_focus_mode = 0
text = "M"

[node name="Backspace" type="Button" parent="Keyboard/Row3" groups=["keyboard_buttons"]]
margin_left = 843.0
margin_right = 960.0
margin_bottom = 34.0
focus_mode = 0
size_flags_horizontal = 3
custom_fonts/font = SubResource( 21 )
enabled_focus_mode = 0
text = "Backspace"

[node name="Row4" type="HBoxContainer" parent="Keyboard"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -41.0
margin_bottom = -9.0

[node name="123" type="Button" parent="Keyboard/Row4" groups=["keyboard_buttons"]]
margin_right = 317.0
margin_bottom = 34.0
focus_mode = 0
size_flags_horizontal = 3
custom_fonts/font = SubResource( 22 )
enabled_focus_mode = 0
text = "123"

[node name="Space" type="Button" parent="Keyboard/Row4" groups=["keyboard_buttons"]]
margin_left = 321.0
margin_right = 638.0
margin_bottom = 34.0
focus_mode = 0
size_flags_horizontal = 3
custom_fonts/font = SubResource( 22 )
enabled_focus_mode = 0
text = "Space"

[node name="Return" type="Button" parent="Keyboard/Row4" groups=["keyboard_buttons"]]
margin_left = 642.0
margin_right = 960.0
margin_bottom = 34.0
focus_mode = 0
size_flags_horizontal = 3
custom_fonts/font = SubResource( 22 )
enabled_focus_mode = 0
text = "Return"

[node name="Peternator" type="AnimatedSprite" parent="."]
position = Vector2( 650, 102 )
scale = Vector2( 0.19, 0.19 )
frames = SubResource( 8 )
animation = "thinking"

[node name="Submit" type="Button" parent="."]
margin_top = 200.0
margin_right = 359.0
margin_bottom = 232.0
size_flags_vertical = 3
custom_colors/font_color = Color( 0.858824, 0, 0, 1 )
custom_fonts/font = SubResource( 2 )
text = "Submit"

[node name="Panel" type="Panel" parent="."]
anchor_left = 0.473
anchor_top = 1.0
anchor_right = 0.904
anchor_bottom = 1.0
margin_left = -0.0800171
margin_top = -332.0
margin_right = -137.84
margin_bottom = -229.0
rect_scale = Vector2( 1.5, 1.5 )
custom_styles/panel = SubResource( 23 )

[node name="Reply" type="Label" parent="."]
anchor_left = 0.493
anchor_top = 1.0
anchor_right = 0.883
anchor_bottom = 1.0
margin_left = -0.279907
margin_top = -316.0
margin_right = -124.68
margin_bottom = -236.0
rect_scale = Vector2( 1.5, 1.5 )
autowrap = true
script = ExtResource( 9 )

[connection signal="focus_entered" from="VBoxContainer/ClientEnter" to="Keyboard" method="_on_ClientEnter_focus_entered"]
[connection signal="focus_exited" from="VBoxContainer/ClientEnter" to="Keyboard" method="_on_ClientEnter_focus_exited"]
[connection signal="focus_entered" from="VBoxContainer/ProductEnter" to="Keyboard" method="_on_ProductEnter_focus_entered"]
[connection signal="focus_exited" from="VBoxContainer/ProductEnter" to="Keyboard" method="_on_ProductEnter_focus_exited"]
[connection signal="focus_entered" from="Keyboard/Row1/Q" to="Keyboard/Row1/Q" method="_on_Q_focus_entered"]
[connection signal="pressed" from="Submit" to="." method="_on_Button_pressed"]
